fix batch query operation really completing full set

Fixes a porting error which led to only doing a query for the first
batch of ids instead of continuing the whole id set

BUG: 494807
FIXED-IN: 25.04.2
(cherry picked from commit 3416562fbac8184ee881c81cc6710c1effcaa982)